--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
     "vue-tsc": "^3.0.4"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.6.0",
-    "@nuxtjs/storybook": "^8.4.1",
-    "eslint": "^9.31.0",
-    "eslint-plugin-storybook": "^.1.1",
+    "@nuxtjs/storybook": "8.4.1",
     "storybook": "9.1.1",
-    "typescript": "^5.8.3"
+    "typescript": "5.8.3"
   },
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
