--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@nuxtjs/storybook": "8.4.1",
+    "@storybook-vue/nuxt": "8.4.1",
     "storybook": "9.1.1",
     "typescript": "5.8.3"
   },
